2009-06-09  kitone  <kitone@gna.org>

	* src/filereader.cc:
	* src/filereader.h:
	New function get_lines.

2009-06-05  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2009-06-03  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.32.0 release.

2009-06-02  kitone  <kitone@gna.org>

	* share/Makefile.am:
	Fix: Install icon to the pixmaps directory.

2009-06-01  kitone  <kitone@gna.org>

	* src/spellchecker.cc:
	Use enchant_dict_add instead of enchant_dict_add_to_pwl (deprecated).

2009-06-01  kitone  <kitone@gna.org>

	* plugins/actions/spellchecking/Makefile.am:
	* plugins/actions/spellchecking/spellchecking.h:
	Remove file spellchecking.h.

	* plugins/actions/spellchecking/dialog-spell-checking.glade:
	* plugins/actions/spellchecking/spellchecking.cc:
	Complete rewrite of the spellchecking plugin. 
	Use the SpellChecker, can check the translation. 

2009-06-01  kitone  <kitone@gna.org>

	* src/document.cc:
	* src/document.h:
	* src/subtitleview.cc:
	* src/subtitleview.h:
	New function get_current_column_name.

2009-05-30  kitone  <kitone@gna.org>

	* src/spellchecker.cc:
	Don't check number.

2009-05-28  kitone  <kitone@gna.org>

	* plugins/actions/scalesubtitles/scalesubtitles.cc:
	More robust with the wrong values of the points, display error messages.

2009-05-28  kitone  <kitone@gna.org>

	* src/gui/automaticspellchecker.cc:
	* src/gui/automaticspellchecker.h:
	Don't split a word with apostrophe.

2009-05-25  kitone  <kitone@gna.org>

	* src/gui/automaticspellchecker.cc:
	Change icon 'goto-bottom' to 'remove'.

2009-05-25  kitone  <kitone@gna.org>

	* src/spellchecker.cc:
	Add debug msg.

2009-05-23  kitone  <kitone@gna.org>

	* src/gui/textviewcell.cc:
	Add a SpellChecker capability to any TextViewCell.

2009-05-23  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Add new files automaticspellchecker.h and automaticspellchecker.cc.

	* src/gui/automaticspellchecker.cc:
	* src/gui/automaticspellchecker.h: